# pyscript_boiler

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
db/: db_client.py  env.toml
sass/: dashboard.sass  index.sass
scripts/: Compile-Sass.ps1  Start-Dev.ps1  Sync-Pyscript.ps1
static/: manifest.json
static/js/: py_worker.js  worker.js
static/public/: dashboard.css  dashboard.css.map  index.css  index.css.map
web/: dashboard.html  dashboard.py  py-script.toml
